eks/application/high-load/highload-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-test-service-load-high
  namespace: app
  labels:
    app: load-test
    load: high
spec:
  selector:
    load: high
  type: ClusterIP # LoadBalancer # NodePort # 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
