eks/application/high-load/highload-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    # change the IP address here
  - host: a91d8bb2c6a8f404cbac9a4f85bda814-622073186.us-east-2.elb.amazonaws.com
    http:
      paths:
      - backend:
          service:
            name: load-test-service-load-high
            port: 
              number: 80
        path: /info1
        pathType: Prefix
      - backend:
          service:
            name: load-test-service
            port: 
              number: 80
        path: /
        pathType: Prefix
